# quant-researcher

./: .gitignore  ARCHITECTURE.md  HACKING.md  README.md  STATUS.md  local_baseline.sh  overnight.sh  pyproject.toml  shakespeare_baseline.sh  shakespeare_strategy.py  strategy.py  toy_baseline.sh  toy_strategy.py
data/: prepare.py  prepare_membership.py  sp500_changes.parquet
harness/: backtest.py  data.py  metrics.py  signals.py
reports/: session_1.html  session_2.html  shakespeare_session8.html  toy_baseline.html
researcher/: _backtest_worker.py  _shakespeare_worker.py  _sklearn_worker.py  attribution.py  cross_session.py  decide.py  domain.py  local_proposer.py  loop.py  proposer.py  runner.py  runs.py
researcher/gepa/: __init__.py  _mock_proposer.py  compare.py  fitness.py  loop.py  mutate.py  pareto.py  prompts.py
researcher/reporting/: queries.py
scripts/: dashboard.py  evolve_prompt.py  inspect_runs.py  report.py  run_research.py
shakespeare_harness/: data.py  metrics.py  model.py  tokenizer.py  trainer.py
tests/: test_attribution.py  test_cross_session.py  test_curriculum.py  test_decide.py  test_domain.py  test_gepa_compare.py  test_gepa_mutate.py  test_gepa_prompts.py  test_multidim_fitness.py  test_pareto.py  test_reporting.py  test_shakespeare_domain.py  test_signals.py  test_toy_domain.py
toy_harness/: data.py  evaluator.py  metrics.py
